# Hodgking-Huxley

./: CMakeLists.txt  HH-model.cpp
include/: HH_Includes.hpp  HH_Model_class.hpp
resources/: init_cond.txt  parameters.txt
simplified/: .gitignore  Makefile  graph.sh  hh-boost.cpp
src/: HH_Model_class.cpp
